--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "noty": "^3.2.0-beta",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.3.0",
-    "stripe": "^8.118.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "laravel-mix": "^5.0.4",
