disponiblizar para turma

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "realtime-pizza",
+  "name": "toppizza",
   "version": "1.0.0",
-  "description": "This is our relatime pizza app",
+  "description": "Site do TopPizza",
   "main": "index.js",
-  "author": "Coder's Gyan",
+  "author": "Cristian Müller",
   "scripts": {
     "serve": "node server.js",
     "dev": "nodemon server.js",
@@ -17,7 +17,11 @@
     "@stripe/stripe-js": "^1.10.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "browserify": "^17.0.0",
     "connect-mongo": "^3.2.0",
+    "correios-brasil": "^2.1.1",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
