--- a/config.env
+++ b/config.env
@@ -1,2 +1,6 @@
 PORT=3000
-MONGO_URL=mongodb+srv://admin:admin@cluster0.8i4em.mongodb.net/users?retryWrites=true&w=majority
+COOKIE_SECRET=delas
+SECRET=greenfood
+STRIPE_PRIVATE_KEY=stripe_secret_key
+MONGO_CONNECTION_URL=mongodb://localhost/greenfood
+MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/GrenFood?retryWrites=true&w=majority
