--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "top-pizza",
+  "name": "green-food",
   "version": "1.0.0",
-  "description": "APP Site para Topo Pizza",
+  "description": "Green Food",
   "main": "index.js",
   "author": "Cristian Müller",
   "scripts": {
@@ -16,12 +16,27 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.4.1",
+    "connect-mongodb-session": "^2.4.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "express-ejs-layouts": "^2.5.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.1",
+    "mercedlogger": "^1.0.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.5",
+    "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
     "laravel-mix": "^6.0.11",
     "nodemon": "^2.0.7",
     "postcss": "8.1",
