incluido cadastro de cliente

--- a/config.env
+++ b/config.env
@@ -3,4 +3,4 @@ COOKIE_SECRET=delas
 SECRET=greenfood
 STRIPE_PRIVATE_KEY=stripe_secret_key
 MONGO_CONNECTION_URL=mongodb://localhost/greenfood
-MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/GrenFood?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/greenfood?retryWrites=true&w=majority
