--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "jquery-mask-plugin": "^1.14.16",
     "mercedlogger": "^1.0.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.5",
