--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.5",
     "mongoose-float": "^1.0.4",
+    "multer": "^1.4.2",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
