--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "slugify": "^1.5.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
