--- a/package.json
+++ b/package.json
@@ -5,45 +5,48 @@
   "main": "index.js",
   "author": "Cristian Müller",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server.js",
     "dev": "nodemon server.js",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
   },
   "license": "MIT",
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@stripe/stripe-js": "^1.10.0",
-    "axios": "^0.19.2",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "browserify": "^17.0.0",
-    "connect-mongo": "^3.2.0",
-    "correios-brasil": "^2.1.1",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.2",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.4.1",
+    "connect-mongodb-session": "^2.4.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.3",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
-    "jquery": "^3.5.1",
     "jquery-mask-plugin": "^1.14.16",
-    "moment": "^2.27.0",
-    "mongoose": "^5.9.25",
-    "noty": "^3.2.0-beta",
+    "mercedlogger": "^1.0.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.5",
+    "mongoose-float": "^1.0.4",
+    "multer": "^1.4.2",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "slugify": "^1.5.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "laravel-mix": "^5.0.4",
-    "nodemon": "^2.0.4",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.26.9",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "@types/jquery": "^3.5.5",
+    "laravel-mix": "^6.0.11",
+    "nodemon": "^2.0.7",
+    "postcss": "8.3.1",
+    "resolve-url-loader": "3.1.2",
+    "sass": "^1.32.7",
+    "sass-loader": "8.*"
+  },
+  "keywords": []
 }
