adicionado integração com cloudinary

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SECRET=greenfood
 STRIPE_PRIVATE_KEY=stripe_secret_key
 MONGO_CONNECTION_URL=mongodb://localhost/greenfood
 MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/greenfood?retryWrites=true&w=majority
+CLOUDINARY_URL=cloudinary://196558749963431:V218Qusu3kkH8qIgXW_7MgDkxcU@dqtdv6ccy
