--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ COOKIE_SECRET=delas
 SECRET=greenfood
 STRIPE_PRIVATE_KEY=stripe_secret_key
 MONGO_CONNECTION_URL=mongodb://localhost/greenfood
-MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/greenfood?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/greenfood?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://admin:greenfood@cluster0.vzrkn.mongodb.net/GreenFoodie?retryWrites=true&w=majority
 CLOUDINARY_URL=cloudinary://196558749963431:V218Qusu3kkH8qIgXW_7MgDkxcU@dqtdv6ccy
